--- a/Prescient/templates/base_layout.html
+++ b/Prescient/templates/base_layout.html
@@ -1,18 +1,39 @@
 <!doctype html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{{ url_for('static', filename='base_style.css') }}">
+  <title>Prescient Finance</title>
+</head>
 <title>{% block title %}{% endblock %} - Prescient</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<nav>
-  <h1>Prescient</h1>
-  <ul>
-    {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
-    {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Register</a>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
-    {% endif %}
-  </ul>
-</nav>
+<body>
+  <nav>
+    <div class="breaks">
+      <div class="bk1"></div>
+      <div class="bk2"></div>
+      <div class="bk3"></div>
+    </div>
+    <div class="Logo">
+      <img src="{{ url_for('static', filename='assets/finance-prescient.png') }}" alt="Prescient Finance">
+    </div>
+    <ul class="nav-icons">
+      {% if g.user %}
+        <li><span>{{ g.user['username'] }}</span></li>
+      {% endif %}
+      <li><a href="#">DASHBOARD</a></li>
+      <li><a href="#">CHARTS</a></li>
+      <li><a href="#">WATCHLIST</a></li>
+      {% if g.user %}
+        <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+      {% else %}
+        <li><a href="{{ url_for('auth.register') }}">Register</a></li>
+        <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+      {% endif %}
+    </ul>
+  </nav>
+  <script src="{{ url_for('static', filename='javascript/navbarscript.js') }}"></script>
+</body>
 <section class="content">
   <header>
     {% block header %}{% endblock %}
