--- a/Prescient/static/styles/dashboard-styles.css
+++ b/Prescient/static/styles/dashboard-styles.css
@@ -20,36 +20,88 @@ a {
 }
 
 table {
- margin-left: auto;
- margin-right: auto;
  width: 500px;
  border-collapse: collapse;
  overflow: hidden;
- box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
- border-radius: 10px 30px 30px 5px;
+ box-shadow: 0 0 20px rgba(0, 0, 0, 0.0);
+ border-radius: 5px;
 }
 
-th, td {
+td {
  padding: 15px;
- background-color: rgba(255, 255, 255, 0.2);
- color: black;
+ background-color: rgba(0, 0, 0, 0.1);
+ color: #B3E5FC;
 }
 
 th {
  text-align: left;
  font-weight: bolder;
+ padding: 15px;
 }
 .watchlist-rows{
   transition: 0.2s
 }
 .watchlist-rows:hover{
-  background-color: #deedfa;
-
+  background-color: #40888f;
 }
 thead {
-  background-color: #4f88bd;
+  background-color: rgba(127, 64, 222, 0.3);
+  color: white;
+  border: 2px solid #B388FF;
 }
 
 tbody {
-   background-color: #80bbf2;
+   background-color: rgba(0, 0, 0, 0.2);
+   border: 2px solid #B3E5FC;
+}
+
+.main-wrapper{
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 1px;
+  grid-row-gap: 1px;
+}
+@media screen and (max-width: 800px) {
+  .main-wrapper{
+    display: block;
+  }
+}
+.summary-table {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2px;
+  border: 1px solid grey;
+  max-width:100vw;
+  box-sizing:border-box;; /* Don't forget this !*/
+}
+
+.line-chart-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2px;
+  border: 1px solid grey;
+  max-width:100vw;
+  box-sizing:border-box; /* Don't forget this !*/
+}
+.pie-chart-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2px;
+  border: 1px solid grey;
+  max-width:100vw;
+  box-sizing:border-box; /* Don't forget this !*/
+}
+
+.bar-chart-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2px;
+  border: 1px solid grey;
+  max-width:100vw;
+  box-sizing:border-box; /* Don't forget this !*/
 }
