--- a/Prescient/static/base_style.css
+++ b/Prescient/static/base_style.css
@@ -9,7 +9,7 @@ nav{
   justify-content: space-around;
   align-items: center;
   min-height: 12vh;
-  background-image: linear-gradient(135deg, #161616, #0F2027,#203A43);
+  background-image: linear-gradient(135deg, #0b071f, #0F2027,#203A43);
   /*background-color: #161616;*/
   font-family: 'Ubuntu', sans-serif;
 }
@@ -69,9 +69,9 @@ nav{
   .nav-icons{
     position: absolute;
     left: 0px;
-    height: 80vh;
+    height: 100vh;
     top: 12vh;
-    background-image: linear-gradient(135deg, #161616, #0F2027,#203A43);
+    background-image: linear-gradient(135deg, #0b071f, #0F2027,#203A43);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -116,7 +116,7 @@ nav{
 
 .main-content {
   padding-left: 10px;
-  background-image: linear-gradient(135deg, #0F2027, #17323d, #17323d,#3b4a6b);
+  background-image: linear-gradient(135deg,#224080, #0F2027, #17323d, #17323d,#3b4a6b);
   font-family: 'Open Sans', sans-serif;
   color: white;
   transition: 1.3s ease;
