--- a/Prescient/static/styles/watchlist-styles.css
+++ b/Prescient/static/styles/watchlist-styles.css
@@ -4,25 +4,48 @@ table {
  width: 500px;
  border-collapse: collapse;
  overflow: hidden;
- box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
- border-radius: 10px 30px 30px 5px;
+ box-shadow: 0 0 20px rgba(0, 0, 0, 0.0);
+ border-radius: 5px;
 }
 
-th, td {
- padding: 15px;
- background-color: rgba(255, 255, 255, 0.2);
- color: black;
+td {
+  padding: 15px;
+  background-color: rgba(0, 0, 0, 0.1);
+  color: #B3E5FC;
 }
 
 th {
- text-align: left;
- font-weight: bolder;
+  text-align: left;
+  font-weight: bolder;
+  padding: 15px;
 }
 
 thead {
-  background-color: #4f88bd;
+  background-color: rgba(127, 64, 222, 0.3);
+  color: white;
+  border: 2px solid #B388FF;
 }
 
 tbody {
-   background-color: #80bbf2;
+  background-color: rgba(0, 0, 0, 0.2);
+  border: 2px solid #B3E5FC;
+}
+.watchlist-rows{
+  transition: 0.2s
+}
+.watchlist-rows:hover{
+  background-color: #40888f;
+}
+
+.action{
+  color:white;
+  border-radius: 5px;
+  background-color: black;
+  padding: 2px;
+}
+
+.danger{
+  color:purple;
+  border-radius: 5px;
+  background-color: skyblue;
 }
