holding period return of the portfolio in the dashboard

--- a/Prescient/templates/securities/dashboard.html
+++ b/Prescient/templates/securities/dashboard.html
@@ -73,6 +73,11 @@
             fontColor: "#d4eaff"
           }
         },
+        title: {
+          display: true,
+          text: "Overall Portfolio Performance",
+          fontColor: "#d4eaff"
+        },
         layout: {
           padding:{
             left: 20,
@@ -101,7 +106,7 @@
                 scaleLabel:{
                   fontColor: "#d4eaff",
                   display: true,
-                  labelString:"Performance (%)"
+                  labelString:"Holding Period Return (%)"
                 },
                 ticks:{
                   fontColor: "#d4eaff",
