added views, models, tools and updates to templates

--- a/Prescient/templates/auth/register.html
+++ b/Prescient/templates/auth/register.html
@@ -1,4 +1,4 @@
-{#% extends 'base_layout.html' %#}
+{% extends 'base_layout.html' %}
 
 {% block header %}
   <h1>{% block title %}THIS IS THE REGISTER PAGE{% endblock %}</h1>
