--- a/Prescient/templates/auth/login.html
+++ b/Prescient/templates/auth/login.html
@@ -1,4 +1,4 @@
-{#% extends 'base_layout.html' %#}
+{% extends 'base_layout.html' %}
 
 {% block header %}
   <h1>{% block title %}THIS IS THE LOGIN PAGE{% endblock %}</h1>
