--- a/Prescient/templates/base_layout.html
+++ b/Prescient/templates/base_layout.html
@@ -24,7 +24,7 @@
       {% endif %}
       <li><a href="{{ url_for('dashboard.index') }}">DASHBOARD</a></li>
       <li><a href="#">CHARTS</a></li>
-      <li><a href="#">WATCHLIST</a></li>
+      <li><a href="{{ url_for('watchlist.main') }}">WATCHLIST</a></li>
       {% if current_user.is_authenticated %}
         <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
       {% else %}
