--- a/Prescient/templates/auth/login.html
+++ b/Prescient/templates/auth/login.html
@@ -1,10 +1,12 @@
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/auth-styles.css') }}">
 {% extends 'base_layout.html' %}
-
+<div class="main-wrapper">
 {% block header %}
   <h1>{% block title %}THIS IS THE LOGIN PAGE{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
+
   {% from "_formhelpers.html" import render_field %}
   <form action="{{ url_for('auth.login') }}" method="post">
     <dl>
@@ -16,4 +18,5 @@
     {{ form.csrf_token }}
   </form>
 
+</div>
 {% endblock %}
