--- a/Prescient/templates/watchlist/main.html
+++ b/Prescient/templates/watchlist/main.html
@@ -11,15 +11,15 @@
   <table>
     <thead>
       <tr>
-        <th>Name</th>
+        <th>Ticker</th>
         <th>Quantity</th>
         <th>Average Price</th>
       </tr>
     </thead>
     <tbody>
-      {% for item in table1 %}
+      {% for item in summary %}
       <tr class="watchlist-rows">
-        <td class="c2">{{item.name}}</td>
+        <td class="c2">{{item.ticker}}</td>
         <td class="c3">{{item.quantity}}</td>
         <td class="c3">{{item.price}}</td>
       </tr>
@@ -58,7 +58,7 @@
       <thead>
         <tr>
           <th>Order ID</th>
-          <th>Name</th>
+          <th>Ticker</th>
           <th>Quantity</th>
           <th>Price</th>
           <th>Sector</th>
@@ -71,14 +71,14 @@
         {% for item in watchlist %}
         <tr class="watchlist-rows">
           <td class="c1">{{item.id}}</td>
-          <td class="c2">{{item.name}}</td>
+          <td class="c2">{{item.ticker}}</td>
           <td class="c3">{{item.quantity}}</td>
           <td class="c4">{{item.price}}</td>
           <td class="c5">{{item.sector}}</td>
-          <td class="c6">{{item.created.strftime('%d-%m-%Y')}}</td>
+          <td class="c6">{{item.created_timestamp.strftime('%d-%m-%Y')}}</td>
           <td>{{item.comments}}</td>
           <td class="edit-trade">
-            {% if current_user == item['holder_id'] %}
+            {% if current_user.id == item.user_id %}
               <button style=color:black; type="button" class="btn-new-wl"
               data-toggle="modal" data-target="#mymodal2{{item.id}}">Edit</button>
                 <div id="mymodal2{{item.id}}" class="modal fade" role="dialog">
