refactored security plot code

--- a/Prescient/templates/charts/performance_breakdown.html
+++ b/Prescient/templates/charts/performance_breakdown.html
@@ -36,6 +36,7 @@
     <p>{{ form.submit() }}</p>
     {{ form.csrf_token }}
   </form>
+</div>
 <div class="line-chart-container">
   <canvas id="myChart"></canvas>
 </div>
